bakkie_derive/tests/ui/fail/app_with_multiple_generic_params.rs
use bakkie_derive::tool;

#[tool]
async fn my_tool(#[app] app: App<String, i32>) -> Result<String, String> {
    Ok("test".to_string())
}

fn main() {}